--- a/index.html
+++ b/index.html
@@ -21,9 +21,44 @@
       </div>
       <button type="submit" class="btn">Add!</button>
     </form>
+    <form id="subtract">
+      <div class="form-group">
+        <label for="subtract1">1st number:</label>
+        <input id="subtract1" class="form-control" type="text">
+      </div>
+      <div class="form-group">
+        <label for="subtract2">2nd number:</label>
+        <input id="subtract2" class="form-control" type="text">
+      </div>
+      <button type="submit" class="btn">Subtract!</button>
+    </form>
+
+    <form id="multiply">
+      <div class="form-group">
+        <label for="multiply1">1st number:</label>
+        <input id="multiply1" class="form-control" type="text">
+      </div>
+      <div class="form-group">
+        <label for="multiply2">2nd number:</label>
+        <input id="multiply2" class="form-control" type="text">
+      </div>
+      <button type="submit" class="btn">Multiply!</button>
+    </form>
+
+    <form id="divide">
+      <div class="form-group">
+        <label for="divide1">1st number:</label>
+        <input id="divide1" class="form-control" type="text">
+      </div>
+      <div class="form-group">
+        <label for="divide2">2nd number:</label>
+        <input id="divide2" class="form-control" type="text">
+      </div>
+      <button type="submit" class="btn">Divide!</button>
+    </form>
 
     <div id="output">
-      
+
     </div>
   </div>
 </body>
